--- a/Curso de Python: PIP y Entornos Virtuales/.gitignore
+++ b/Curso de Python: PIP y Entornos Virtuales/.gitignore
@@ -243,3 +243,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python
+
+
+# Agregando mis propios ignores.
+chart/*.png
