--- a/Curso de Python: PIP y Entornos Virtuales/web-server/Dockerfile
+++ b/Curso de Python: PIP y Entornos Virtuales/web-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8
+FROM python:3.10
 
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 COPY . /app
 
-CMD bash -c "while true; do sleep 1; done"
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
